--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -56,50 +56,36 @@
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="#">About Me</a>
         <a class="nav-link" href="#">Facebook</a>
-        <a class="nav-link" href="posts/">Blog</a>
+        <a class="nav-link" href="#">Blog</a>
       </div>
     </div>
   </div>
 </nav>
 
   <main>
-
-    <section class="py-5 text-center container">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <p class="lead text-muted">Hey there! I'm excited to see you here! You can write me right now!</p>
-          <p>
-            <a href="mailto:olhovskii.m@mail.ru" class="btn btn-primary my-1">Mail me</a>
-          </p>
-        </div>
+      <div class="container" style="margin-top: 20px; margin-bottom: 40px;">
+          <h1 class="fw-normal">Recent posts</h1>
       </div>
-    </section>
 
-    <div class="album py-5 bg-light">
+
       <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          {% for posts in posts.all %}
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3" style="margin-bottom: 30px;">
+              <div class="col">
+                <div class="card shadow-sm">
+                    <h2 class="fw-normal">{{ posts.title }}</h2>
+                    <img class="card-img-top" src="{{ posts.image.url }}" />
 
-          {% for event in events.all %}
-
-          <div class="col">
-            <div class="card shadow-sm">
-                <img class="card-img-top" src="{{ event.event_image.url }}" />
-
-                <div class="card-body">
-                <p class="card-text">{{ event.event_text}}</p>
-
+                  <div class="card-body">
+                    <p class="card-text">{{ posts.text }}</p>
+                    <p class="card-text">{{ posts.date }}</p>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-
           {% endfor %}
-
-        </div>
       </div>
-    </div>
-
   </main>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
