--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,13 +1,15 @@
 
 <!doctype html>
 <html lang="en">
+{% load static %}
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.79.0">
-    <title>Album example · Bootstrap v5.0</title>
+    <title>My Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
@@ -48,15 +50,15 @@
     
 <nav class="navbar navbar-expand-lg navbar-light fst-italic" style="background-color: #F1BA94;">
   <div class="container">
-    <a class="navbar-brand" href="#">My Awesome Blog</a>
+    <a class="navbar-brand" href="{% url 'home' %}">My Awesome Blog</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="#">About Me</a>
-        <a class="nav-link" href="#">Facebook</a>
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="{% static 'AboutMe.docx' %}">About Me</a>
+        <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://vk.com/m0ksuta">Vk</a>
+        <a class="nav-link active" href="#">Blog</a>
       </div>
     </div>
   </div>
@@ -69,16 +71,16 @@
 
 
       <div class="container">
-          {% for posts in posts.all %}
+          {% for post in post.all %}
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3" style="margin-bottom: 30px;">
               <div class="col">
                 <div class="card shadow-sm">
-                    <h2 class="fw-normal">{{ posts.title }}</h2>
-                    <img class="card-img-top" src="{{ posts.image.url }}" />
+                    <a href="{% url 'specific_post' post.id %}"><h2 class="fw-normal">{{ post.title }}</h2></a>
+                    <img class="card-img-top" src="{{ post.image.url }}" />
 
                   <div class="card-body">
-                    <p class="card-text">{{ posts.text }}</p>
-                    <p class="card-text">{{ posts.date }}</p>
+                    <p class="card-text">{{ post.get_summary }}</p>
+                    <p class="card-text">{{ post.date }}</p>
                   </div>
                 </div>
               </div>
