--- a/blog/templates/blog/specific_post.html
+++ b/blog/templates/blog/specific_post.html
@@ -2,13 +2,14 @@
 <!doctype html>
 <html lang="en">
 {% load static %}
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.79.0">
-    <title>Home page</title>
+    <title>{{ post.title }}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
@@ -49,7 +50,7 @@
     
 <nav class="navbar navbar-expand-lg navbar-light fst-italic" style="background-color: #F1BA94;">
   <div class="container">
-    <a class="navbar-brand" href="#">My Awesome Blog</a>
+    <a class="navbar-brand" href="{% url 'home' %}">My Awesome Blog</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -65,43 +66,24 @@
 
   <main>
 
-    <section class="py-5 text-center container">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <p class="lead text-muted">Hey there! I'm excited to see you here! You can write me right now!</p>
-          <p>
-            <a href="mailto:olhovskii.m@mail.ru" class="btn btn-primary my-1">Mail me</a>
-          </p>
-          <img src="{% static 'hey_there.jpg' %}" alt="HeyThere" height="300" width="300" class="img-fluid">
-        </div>
-      </div>
-    </section>
 
-    <div class="album py-5 bg-light">
       <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-          {% for event in events.all %}
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3 pt-5" style="margin-bottom: 30px;">
+              <div class="col">
+                <div class="card shadow-sm">
+                    <h2 class="fw-normal">{{ post.title }}</h2>
+                    <img class="card-img-top" src="{{ post.image.url }}" />
 
-          <div class="col">
-            <div class="card shadow-sm">
-                <img class="card-img-top" src="{{ event.event_image.url }}" />
-
-                <div class="card-body">
-                <p class="card-text">{{ event.event_text}}</p>
-
+                  <div class="card-body">
+                    <p class="card-text">{{ post.text }}</p>
+                    <p class="card-text">{{ post.date }}</p>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-
-          {% endfor %}
-
-        </div>
       </div>
-    </div>
-
   </main>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
