--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -42,6 +42,31 @@
           font-size: 3.5rem;
         }
       }
+         a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+
+a:hover {
+  text-decoration: none;
+}
+
+
+a:active {
+  text-decoration: none;
+}
+h2{
+    color: #212529;
+}
+h2:hover{
+    color: #696969;
+}
+
+
     </style>
 
     
